[gd_scene load_steps=6 format=4 uid="uid://tatjpjdsp6lb"]

[ext_resource type="Script" uid="uid://8iw3t3xh8jpw" path="res://Prefab/GUI/ProgressMeter/GeneralProgressMeter.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://hbnfxpwe6u4k" path="res://Asset/Texture/GUI/General/FlagMeter/FlagMeterBackground.png" id="2"]
[ext_resource type="Texture2D" uid="uid://j0u3c7wlxb3i" path="res://Asset/Texture/GUI/General/FlagMeter/FlagMeterFill.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cwhjyv8jvpy64" path="res://Asset/Texture/GUI/General/FlagMeter/FlagMeterZombieHead.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b6tabbldgpnup" path="res://Asset/Texture/GUI/General/FlagMeter/FlagMeterLevelProgress.png" id="5"]

[node name="GeneralProgressMeter" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")
waveNum = 10
waveInterval = 5
previewWave = 0

[node name="ProgressBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
texture_repeat = 2
layout_mode = 0
offset_right = 158.0
offset_bottom = 23.0
step = 0.01
fill_mode = 1
texture_under = ExtResource("2")
texture_progress = ExtResource("3")

[node name="FlagContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 15.0
offset_right = 153.0
offset_bottom = 15.0
theme_override_constants/separation = 250

[node name="HeadTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 140.0
offset_top = -4.0
offset_right = 165.0
offset_bottom = 21.0
pivot_offset = Vector2(36, 46)
texture = ExtResource("4")

[node name="FlagMeterLevelProgress" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 18.0
offset_right = 123.0
offset_bottom = 29.0
texture = ExtResource("5")
